fix space between footer and content into home, in tablet device + carousel-indicators with more spacing

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11465,8 +11465,6 @@ header {
 #hero {
   width: 100%;
   height: 70vh;
-  /*     background-color: rgba(darken($secondary, 10), 0.8);
- */
   overflow: hidden;
   padding: 0;
   margin-bottom: -120px;
@@ -11485,6 +11483,7 @@ header {
 
 #hero .carousel-item h1 {
   width: 75%;
+  text-align: center;
 }
 
 #hero .carousel-item::before {
@@ -11583,6 +11582,7 @@ header {
   border-radius: 50px;
   margin-bottom: 180px;
   opacity: 0.2;
+  margin: 10px;
 }
 
 #hero .carousel-indicators li.active {
@@ -11656,7 +11656,7 @@ header {
 }
 
 @media (max-width: 768px) {
-  #hero #hero h1 {
+  #hero #hero .carousel-container h1 {
     font-size: 20px;
   }
 }
@@ -11666,7 +11666,7 @@ header {
     height: 430px;
   }
 
-  #hero #hero h1 {
+  #hero #hero .carousel-container h1 {
     font-size: 20px;
   }
 }
@@ -12042,6 +12042,7 @@ section a {
 
 .team .team-grid .member img {
   width: 160px;
+  height: 160px !important;
   height: auto;
   border-radius: 50%;
   margin: 0 0 20px 0;
@@ -12414,7 +12415,7 @@ section a {
 }
 
 /*--------------------------------------------------------------
-# Map 
+# Map
 --------------------------------------------------------------*/
 
 .map-responsive {
@@ -12539,6 +12540,12 @@ section a {
   .social-links {
     padding-top: 10px;
     padding-left: 20px;
+  }
+}
+
+@media (max-width: 768px) {
+  #footer {
+    margin-bottom: -250px;
   }
 }
 
@@ -12727,7 +12734,7 @@ section a {
 
 .dashboard-team img {
   width: 80px;
-  height: auto;
+  height: 80px;
   border-radius: 50%;
   background-size: cover;
 }
