--- a/resources/sass/_hero.scss
+++ b/resources/sass/_hero.scss
@@ -1,8 +1,6 @@
 #hero {
     width: 100%;
     height: 70vh;
-    /*     background-color: rgba(darken($secondary, 10), 0.8);
- */
     overflow: hidden;
     padding: 0;
     margin-bottom: -120px;
@@ -18,6 +16,7 @@
         background-position: center center;
         h1 {
             width: 75%;
+            text-align: center;
         }
     }
 
@@ -60,7 +59,6 @@
 
     p {
         width: 80%;
-
         animation-delay: 0.4s;
         margin: 0 auto 30px auto;
         color: arken($secondary, 15);
@@ -119,6 +117,7 @@
         border-radius: 50px;
         margin-bottom: 180px;
         opacity: 0.2;
+        margin: 10px;
         &.active {
             opacity: 1;
         }
@@ -180,8 +179,10 @@
 
     @media (max-width: 768px) {
         #hero {
-            h1 {
-                font-size: 20px;
+            .carousel-container {
+                h1 {
+                    font-size: 20px;
+                }
             }
         }
     }
@@ -189,8 +190,10 @@
     @media (min-width: 320px) and (max-width: 767px) {
         #hero {
             height: 430px;
-            h1 {
-                font-size: 20px;
+            .carousel-container {
+                h1 {
+                    font-size: 20px;
+                }
             }
         }
     }
